# FastAPI_test

./: ARCHITECTURE.md  pyproject.toml  sql_app.db
src/: main.py  sql_app.db
src/app/: database.py
src/app/models/: post.py
src/app/schemas/: post.py
src/app/services/: post_service.py
